--- a/scenario2/kubernetes/deployment.yml
+++ b/scenario2/kubernetes/deployment.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello
+  name: countapp
 spec:
   replicas: 2
   strategy:
@@ -11,11 +11,11 @@ spec:
       maxUnavailable: 100%
   selector:
     matchLabels:
-      app: hello
+      app: countapp
   template:
     metadata:
       labels:
-        app: hello
+        app: countapp
     spec:
       affinity:
         # ⬇⬇⬇ This ensures pods will land on separate hosts
@@ -26,7 +26,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
       - name: hello
-        image: nginxdemos/hello:latest
+        image: nginxdemos/countapp:latest
         ports:
           - name: http
             containerPort: 80
